--- a/css/custom.css
+++ b/css/custom.css
@@ -50,7 +50,7 @@ h6 {
 
 
 .bgpic{
-background-image:url("../res/bg.jpg");
+background-image:url("../bgwork.jpg");
 background-position: center center ;
 background-repeat: no-repeat;
 background-attachment: fixed;
