--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,7 @@ html {
 }
 /* Copy & Lists */
 p {
+  color : #F5F5F5;
   line-height: 1.5rem;
   margin-top: 1rem;
   margin-bottom: 0;
@@ -19,7 +20,7 @@ h4,
 h5,
 h6 {
   /* Change heading typefaces here */
-
+color : #F5F5F5;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
   line-height: 1.5rem;
@@ -61,7 +62,8 @@ font-family: 'Oswald', sans-serif;
 .article{
 width:70%;
 margin-left:40px;
-margin-bottom:50px
+margin-bottom:50px;
+  color : #F5F5F5;
 }
 
 .footer{
